--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -4,8 +4,15 @@
     <table>
         <tr>
             <td><p th:text="#{dentist.name}">dentist.name</p></td>
-            <td><input type="text" th:field="*{dentistName}"/></td>
-            <td th:if="${#fields.hasErrors('dentistName')}" th:errors="*{dentistName}">name.error</td>
+            <td>
+                <select th:field="*{dentistName}">
+                    <option value = "Galerius Maximus">Galerius Maximus</option>
+                    <option value = "Lucretia Amata">Lucretia Amata</option>
+                    <option value = "Equitia Clara">Equitia Clara</option>
+                    <option value = "Horatius Fulgencio">Horatius Fulgencio</option>
+                    <option value = "Malleolus Paulus">Malleolus Paulus</option>
+                </select>
+            </td>
         </tr>
         <tr>
             <td><p th:text="#{visit.date}">visit.date</p></td>
