--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -1,5 +1,33 @@
 <html>
-<body>
+<head>
+    <script>
+    /*<![CDATA[*/
+    function setDefaultDateAndMinDateToToday() {
+
+        var today = new Date();
+        var dd = today.getDate();
+        var mm = today.getMonth()+1; //January is 0!
+        var yyyy = today.getFullYear();
+
+        if(dd<10){
+            dd='0'+dd
+        }
+
+        if(mm<10){
+            mm='0'+mm
+        }
+
+        var todayString = yyyy+'-'+mm+'-'+dd;
+
+        document.getElementById("datePicker").value = todayString;
+        document.getElementById("datePicker").setAttribute("min", todayString);
+
+        // got it from https://stackoverflow.com/questions/32378590/set-date-input-fields-max-date-to-today
+    }
+    /*]]>*/
+    </script>
+</head>
+<body onload="setDefaultDateAndMinDateToToday()">
 <form action="#" th:action="@{/}" th:object="${dentistVisitDTO}" method="post">
     <table>
         <tr>
@@ -16,7 +44,7 @@
         </tr>
         <tr>
             <td><p th:text="#{visit.date}">visit.date</p></td>
-            <td><input type="date" th:field="*{visitTime}"/></td>
+            <td><input type="date" id="datePicker" th:field="*{visitTime}" /></td>
         </tr>
         <tr>
             <td>
