--- a/src/main/resources/templates/formWithAllAppointments.html
+++ b/src/main/resources/templates/formWithAllAppointments.html
@@ -70,6 +70,25 @@
         </tr>
     </table>
 </form>
-<input type="button" id="tableButton" value="Show Appointment Table" onclick="location.href='show-appointments'"/>
+<input type="button" id="tableButton" value="Close Appointment Table" onclick="location.href='/'"/>
+<div id="appointmentTable">
+    <table>
+        <thead>
+        <tr>
+            <th> Dentist </th>
+            <th> Appointment </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:if="${appointments.empty}">
+            <td colspan="2"> No Appointments have been made </td>
+        </tr>
+        <tr th:each="appointment : ${appointments}">
+            <td><span th:text="${appointment.dentistName}"> Dentist </span></td>
+            <td><span th:text="${appointment.appointmentTime}"> Appointment </span></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
