--- a/src/main/resources/templates/form-with-all-appointments.html
+++ b/src/main/resources/templates/form-with-all-appointments.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <td><p th:text="#{appointment.dateAndTime}">appointment.dateAndTime</p></td>
-            <td><input type="datetime-local" id="dateTimePicker" th:field="*{appointmentTime}"/></td>
+            <td><input type="datetime-local" id="dateTimePicker" step="3600" th:field="*{appointmentTime}"/></td>
         </tr>
         <tr>
             <td>
