--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -37,13 +37,15 @@
         <tr>
             <th> Dentist </th>
             <th> Appointment </th>
+            <th> <input type="button" id="editButton" onclick="location.href='/edit'" value="Edit Appointments" /> </th>
+            <th> <input type="button" id="deleteButton" value="Delete Appointments" /> </th>
         </tr>
         </thead>
         <tbody>
-        <tr th:if="${appointments.empty}">
+        <tr th:if="${appointments.empty()}">
             <td colspan="2"> No Appointments have been made </td>
         </tr>
-        <tr th:each="appointment : ${appointments}">
+        <tr th:each="appointment : ${appointments.getAppointments()}">
             <td><span th:text="${appointment.dentistName}"> Dentist </span></td>
             <td><span th:text="${appointment.appointmentTime}"> Appointment </span></td>
         </tr>
