--- a/src/main/resources/templates/form_edit.html
+++ b/src/main/resources/templates/form_edit.html
@@ -28,13 +28,14 @@
                         <input th:name="|appointments[${itemStat.index}].dentistName|" th:value="${appointment.getDentistName()}"/>
                     </td>
                     <td>
-                        <input type="datetime-local" id="editDateTimePicker" step="3600" th:name="|appointments[${itemStat.index}].appointmentTime|" th:value="${appointment.getAppointmentTime()}"/>
+                        <input type="datetime-local" step="3600" th:name="|appointments[${itemStat.index}].appointmentTime|" th:value="${appointment.getAppointmentTime()}"/>
                     </td>
                 </tr>
                 </tbody>
             </table>
         </fieldset>
     </form>
+    <h3 th:text="${error}"></h3>
 </div>
 </body>
 </html>
