simple deletion page works (sends correct data to backend)

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -38,7 +38,7 @@
             <th> Dentist </th>
             <th> Appointment </th>
             <th> <input type="button" id="editButton" onclick="location.href='/edit'" value="Edit Appointments" /> </th>
-            <th> <input type="button" id="deleteButton" value="Delete Appointments" /> </th>
+            <th> <input type="button" id="deleteButton" onclick="location.href='/delete'" value="Delete Appointments" /> </th>
         </tr>
         </thead>
         <tbody>
