--- a/src/main/resources/templates/form_edit.html
+++ b/src/main/resources/templates/form_edit.html
@@ -8,7 +8,7 @@
 <div id="appointmentTable">
     <form action="#" th:action="@{/edit}" th:object="${form}" method="post">
         <fieldset>
-            <input type="submit" id="submitButton" th:value="Save"/>
+            <input type="submit" id="submitButton" th:value="Edit"/>
             <input type="reset" id="resetButton" name="reset" th:value="Reset"/>
             <p>If you wish to drop your made changes please click 'Reset'</p>
             <table>
