add functionality of checking whether the appointment is available or has already been booked

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -27,6 +27,9 @@
             <td>
                 <button type="submit" th:text="#{register.appointment}"></button>
             </td>
+            <td>
+                <h3 th:text="${error}"></h3>
+            </td>
         </tr>
     </table>
 </form>
