add verification that there can't be two equal appointments to /edit endpoint

--- a/src/main/resources/templates/form_edit.html
+++ b/src/main/resources/templates/form_edit.html
@@ -36,6 +36,7 @@
         </fieldset>
     </form>
     <h3 th:text="${error}"></h3>
+    <h3 th:text="${twoEqualAppointments}"></h3>
 </div>
 </body>
 </html>
