--- a/src/main/resources/templates/form_edit.html
+++ b/src/main/resources/templates/form_edit.html
@@ -8,6 +8,8 @@
 <div id="appointmentTable">
     <form action="#" th:action="@{/edit}" th:object="${form}" method="post">
         <fieldset>
+            <h2>Edit Appointments</h2>
+            <p></p>
             <input type="submit" id="submitButton" th:value="Edit"/>
             <input type="reset" id="resetButton" name="reset" th:value="Reset"/>
             <p>If you wish to drop your made changes please click 'Reset'</p>
