--- a/src/main/resources/templates/form_delete.html
+++ b/src/main/resources/templates/form_delete.html
@@ -8,6 +8,8 @@
 <div id="appointmentTable">
   <form action="#" th:action="@{/delete}" method="post">
     <fieldset>
+      <h2>Delete Appointments</h2>
+      <p></p>
       <input type="submit" id="submitButton" th:value="Delete"/>
       <p>Choose which appointments you want to delete</p>
       <table>
