--- a/src/main/resources/templates/form_delete.html
+++ b/src/main/resources/templates/form_delete.html
@@ -10,8 +10,9 @@
     <fieldset>
       <h2>Delete Appointments</h2>
       <p></p>
+      <p>* Choose which appointments you want to delete by using checkbox</p>
       <input type="submit" id="submitButton" th:value="Delete"/>
-      <p>Choose which appointments you want to delete</p>
+      <p></p>
       <table>
         <thead>
         <tr>
