--- a/src/main/resources/templates/form_edit.html
+++ b/src/main/resources/templates/form_edit.html
@@ -10,9 +10,10 @@
         <fieldset>
             <h2>Edit Appointments</h2>
             <p></p>
+            <p>* If you wish to drop your made changes please click 'Reset'</p>
             <input type="submit" id="submitButton" th:value="Edit"/>
             <input type="reset" id="resetButton" name="reset" th:value="Reset"/>
-            <p>If you wish to drop your made changes please click 'Reset'</p>
+            <p></p>
             <table>
                 <thead>
                 <tr>
