clean up the DataPersistenceService class

--- a/src/main/resources/templates/form_delete.html
+++ b/src/main/resources/templates/form_delete.html
@@ -11,7 +11,7 @@
       <h2>Delete Appointments</h2>
       <p></p>
       <p>* Choose which appointments you want to delete by using checkbox</p>
-      <input type="submit" id="submitButton" th:value="Delete"/>
+      <input type="submit" id="submitButton" th:value="DELETE"/>
       <p></p>
       <table>
         <thead>
