--- a/src/main/resources/templates/form_edit.html
+++ b/src/main/resources/templates/form_edit.html
@@ -11,7 +11,7 @@
             <h2>Edit Appointments</h2>
             <p></p>
             <p>* If you wish to drop your made changes please click 'Reset'</p>
-            <input type="submit" id="submitButton" th:value="Edit"/>
+            <input type="submit" id="submitButton" th:value="EDIT"/>
             <input type="reset" id="resetButton" name="reset" th:value="Reset"/>
             <p></p>
             <table>
