--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -104,7 +104,7 @@
                     </thead>
                     <tbody>
                     <tr th:if="${search.empty()}">
-                        <td colspan="2"> No Appointments have been found </td>
+                        <td colspan="2"> Click 'Search' for a new search / No appointments have been found </td>
                     </tr>
                     <tr th:each="appointment : ${search.getAppointments()}">
                         <td><span th:text="${appointment.dentistName}"> Dentist </span></td>
