--- a/src/main/resources/templates/form_delete.html
+++ b/src/main/resources/templates/form_delete.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <input type="button" id="tableButton" onclick="location.href='/'" value="Back to Registration" />
+<p></p>
 <div id="appointmentTable">
   <form action="#" th:action="@{/delete}" method="post">
     <fieldset>
@@ -21,16 +22,13 @@
         </tr>
         </thead>
         <tbody>
+        <tr th:if="${form.empty()}">
+          <td colspan="2"> No Appointments have been made </td>
+        </tr>
         <tr th:each="appointment, itemStat : ${form.appointments}">
-          <td>
-            <span th:text="${appointment.dentistName}" > Dentist </span>
-          </td>
-          <td>
-            <span th:text="${appointment.appointmentTime}" > Appointment </span>
-          </td>
-          <td>
-            <input type="checkbox" name="appointmentIds" th:value="${appointment.getId()}" />
-          </td>
+          <td><span th:text="${appointment.dentistName}" > Dentist </span></td>
+          <td><span th:text="${appointment.appointmentTime}" > Appointment </span></td>
+          <td><input type="checkbox" name="appointmentIds" th:value="${appointment.getId()}" /></td>
         </tr>
         </tbody>
       </table>
