--- a/src/main/resources/templates/form_edit.html
+++ b/src/main/resources/templates/form_edit.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <input type="button" id="tableButton" onclick="location.href='/'" value="Back to Registration" />
+<p></p>
 <div id="appointmentTable">
     <form action="#" th:action="@{/edit}" th:object="${form}" method="post">
         <fieldset>
@@ -23,16 +24,13 @@
                 </tr>
                 </thead>
                 <tbody>
+                <tr th:if="${form.empty()}">
+                    <td colspan="2"> No Appointments have been made </td>
+                </tr>
                 <tr th:each="appointment, itemStat : ${form.appointments}">
-                    <td>
-                        <input type="hidden" th:name="|appointments[${itemStat.index}].id|" th:value="${appointment.getId()}"/>
-                    </td>
-                    <td>
-                        <input th:name="|appointments[${itemStat.index}].dentistName|" th:value="${appointment.getDentistName()}"/>
-                    </td>
-                    <td>
-                        <input type="datetime-local" step="3600" th:name="|appointments[${itemStat.index}].appointmentTime|" th:value="${appointment.getAppointmentTime()}"/>
-                    </td>
+                    <td><input type="hidden" th:name="|appointments[${itemStat.index}].id|" th:value="${appointment.getId()}"/></td>
+                    <td><input th:name="|appointments[${itemStat.index}].dentistName|" th:value="${appointment.getDentistName()}"/></td>
+                    <td><input type="datetime-local" step="3600" th:name="|appointments[${itemStat.index}].appointmentTime|" th:value="${appointment.getAppointmentTime()}"/></td>
                 </tr>
                 </tbody>
             </table>
