--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -17,7 +17,7 @@
         <tr>
             <td>
                 <select th:field="*{dentistName}">
-                    <option th:each="name : ${listOfDentists}" th:value="${name}" th:text="${name}"></option>
+                    <option th:each="name : ${dentistNames}" th:value="${name}" th:text="${name}"></option>
                 </select>
             </td>
             <td><input type="datetime-local" id="dateTimePicker" step="3600" onchange="checkCorrectTime()" th:field="*{appointmentTime}"/></td>
@@ -76,7 +76,7 @@
                     <td>
                         <select th:field="*{dentistName}">
                             <option th:value="0" th:text="None"></option>
-                            <option th:each="name : ${listOfDentists}" th:value="${name}" th:text="${name}"></option>
+                            <option th:each="name : ${dentistNames}" th:value="${name}" th:text="${name}"></option>
                         </select>
                     </td>
                     <td>
@@ -103,10 +103,10 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:if="${search.empty()}">
+                    <tr th:if="${searchResult.empty()}">
                         <td colspan="2"> Click 'Search' for a new search / No appointments have been found </td>
                     </tr>
-                    <tr th:each="appointment : ${search.getAppointments()}">
+                    <tr th:each="appointment : ${searchResult.getAppointments()}">
                         <td><span th:text="${appointment.dentistName}"> Dentist </span></td>
                         <td><span th:text="${appointment.appointmentTime}"> Appointment </span></td>
                     </tr>
