--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -20,7 +20,7 @@
                     <option th:each="name : ${dentistNames}" th:value="${name}" th:text="${name}"></option>
                 </select>
             </td>
-            <td><input type="datetime-local" id="dateTimePicker" step="3600" onchange="checkCorrectTime()" th:field="*{appointmentTime}"/></td>
+            <td><input type="datetime-local" id="dateTimePicker" step="3600" onchange="checkCorrectTime()" th:field="*{appointmentDateTime}"/></td>
         </tr>
         <tr>
             <td>
@@ -51,7 +51,7 @@
         </tr>
         <tr th:each="appointment : ${appointments.getAppointments()}">
             <td><span th:text="${appointment.dentistName}"> Dentist </span></td>
-            <td><span th:text="${appointment.appointmentTime}"> Appointment </span></td>
+            <td><span th:text="${appointment.appointmentDateTime}"> Appointment </span></td>
         </tr>
         </tbody>
     </table>
@@ -108,7 +108,7 @@
                     </tr>
                     <tr th:each="appointment : ${searchResult.getAppointments()}">
                         <td><span th:text="${appointment.dentistName}"> Dentist </span></td>
-                        <td><span th:text="${appointment.appointmentTime}"> Appointment </span></td>
+                        <td><span th:text="${appointment.appointmentDateTime}"> Appointment </span></td>
                     </tr>
                     </tbody>
                 </table>
