--- a/src/main/resources/templates/form_edit.html
+++ b/src/main/resources/templates/form_edit.html
@@ -30,7 +30,7 @@
                 <tr th:each="appointment, itemStat : ${form.appointments}">
                     <td><input type="hidden" th:name="|appointments[${itemStat.index}].id|" th:value="${appointment.getId()}"/></td>
                     <td><input th:name="|appointments[${itemStat.index}].dentistName|" th:value="${appointment.getDentistName()}"/></td>
-                    <td><input type="datetime-local" step="3600" th:name="|appointments[${itemStat.index}].appointmentTime|" th:value="${appointment.getAppointmentTime()}"/></td>
+                    <td><input type="datetime-local" step="3600" th:name="|appointments[${itemStat.index}].appointmentDateTime|" th:value="${appointment.getAppointmentDateTime()}"/></td>
                 </tr>
                 </tbody>
             </table>
