--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -5,116 +5,114 @@
     <script type="text/javascript" th:src="@{/js/appointment-table-settings.js}"></script>
 </head>
 <body onload="setDefaultDateAndMinDateToToday(); showAppointmentTable()">
-<div id="registerForm">
-<form action="#" th:action="@{/}" th:object="${dentistAppointmentDTO}" method="post">
-    <fieldset>
-        <h2>Register Appointment</h2>
-        <table>
-        <tr>
-            <th th:text="#{dentist.name}">dentist.name</th>
-            <th th:text="#{appointment.dateAndTime}">appointment.dateAndTime</th>
-        </tr>
-        <tr>
-            <td>
-                <select th:field="*{dentistName}">
-                    <option th:each="name : ${dentistNames}" th:value="${name}" th:text="${name}"></option>
-                </select>
-            </td>
-            <td><input type="datetime-local" id="dateTimePicker" step="3600" onchange="checkCorrectTime()" th:field="*{appointmentDateTime}"/></td>
-        </tr>
-        <tr>
-            <td>
-                <button type="submit" th:text="#{register.appointment}"></button>
-            </td>
-        </tr>
-    </table>
-        <h3 th:text="${error}"></h3>
-    </fieldset>
-</form>
-</div>
-<p></p>
-<p>* Click 'Show Appointment Table' to see all appointments and to edit or delete appointments</p>
-<input type="button" id="tableButton" onclick="showAppointmentTable(); changeButtonValue()" value="Show Appointment Table" />
-<div id="appointmentTable">
-    <table>
-        <thead>
-        <tr>
-            <th> Dentist </th>
-            <th> Appointment </th>
-            <th> <input type="button" id="editButton" onclick="location.href='/edit'" value="Edit Appointments" /> </th>
-            <th> <input type="button" id="deleteButton" onclick="location.href='/delete'" value="Delete Appointments" /> </th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:if="${appointments.empty()}">
-            <td colspan="2"> No Appointments have been made </td>
-        </tr>
-        <tr th:each="appointment : ${appointments.getAppointments()}">
-            <td><span th:text="${appointment.dentistName}"> Dentist </span></td>
-            <td><span th:text="${appointment.appointmentDateTime}"> Appointment </span></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<p></p>
-<div id="searchForm">
-    <form action="#" th:action="@{/search}" th:object="${searchDTO}" method="post">
-        <fieldset>
-            <h2>Search Appointments</h2>
-            <p>* Any or all of the 3 fields may be empty</p>
-            <p>* If you want to nullify the dates please click 'Reset'</p>
-            <table>
-                <thead>
-                <tr>
-                    <th> Dentist </th>
-                    <th> Start Date and Time </th>
-                    <th> End Date and Time </th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>
-                        <select th:field="*{dentistName}">
-                            <option th:value="0" th:text="None"></option>
-                            <option th:each="name : ${dentistNames}" th:value="${name}" th:text="${name}"></option>
-                        </select>
-                    </td>
-                    <td>
-                        <input type="datetime-local" th:field="*{startingFromDate}"/>
-                    </td>
-                    <td>
-                        <input type="datetime-local" th:field="*{endOnDate}"/>
-                    </td>
-                    <td>
-                        <input type="submit" id="submitButton" th:value="SEARCH"/>
-                    </td>
-                    <td>
-                        <input type="reset" id="resetButton" name="reset" th:value="Reset"/>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <div id="searchTable">
+    <div id="registerForm">
+        <form action="#" th:action="@{/}" th:object="${dentistAppointmentDTO}" method="post">
+            <fieldset>
+                    <h2>Register Appointment</h2>
                 <table>
                     <thead>
-                    <tr>
-                        <th> Dentist </th>
-                        <th> Appointment </th>
-                    </tr>
+                        <tr>
+                            <th th:text="#{dentist.name}">dentist.name</th>
+                            <th th:text="#{appointment.dateAndTime}">appointment.dateAndTime</th>
+                        </tr>
                     </thead>
                     <tbody>
-                    <tr th:if="${searchResult.empty()}">
-                        <td colspan="2"> Click 'Search' for a new search / No appointments have been found </td>
-                    </tr>
-                    <tr th:each="appointment : ${searchResult.getAppointments()}">
-                        <td><span th:text="${appointment.dentistName}"> Dentist </span></td>
-                        <td><span th:text="${appointment.appointmentDateTime}"> Appointment </span></td>
-                    </tr>
+                        <tr>
+                            <td>
+                                <select th:field="*{dentistName}">
+                                    <option th:each="name : ${dentistNames}" th:value="${name}" th:text="${name}"></option>
+                                </select>
+                            </td>
+                            <td><input type="datetime-local" id="dateTimePicker" step="3600" onchange="checkCorrectTime()" th:field="*{appointmentDateTime}"/></td>
+                        </tr>
+                        <tr>
+                            <td><button type="submit" th:text="#{register.appointment}"></button></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h3 th:text="${error}"></h3>
+            </fieldset>
+        </form>
+    </div>
+    <div id="appointmentTableSection">
+                <p></p>
+                <p>* Click 'Show Appointment Table' to see all appointments and to edit or delete appointments</p>
+                <input type="button" id="tableButton" onclick="showAppointmentTable(); changeButtonValue()" value="Show Appointment Table" />
+            <div id="appointmentTable">
+                <table>
+                    <thead>
+                        <tr>
+                            <th> Dentist </th>
+                            <th> Appointment </th>
+                            <th> <input type="button" id="editButton" onclick="location.href='/edit'" value="Edit Appointments" /> </th>
+                            <th> <input type="button" id="deleteButton" onclick="location.href='/delete'" value="Delete Appointments" /> </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:if="${appointments.empty()}">
+                            <td colspan="2"> No Appointments have been made </td>
+                        </tr>
+                        <tr th:each="appointment : ${appointments.getAppointments()}">
+                            <td><span th:text="${appointment.dentistName}"> Dentist </span></td>
+                            <td><span th:text="${appointment.appointmentDateTime}"> Appointment </span></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
-        </fieldset>
-    </form>
-</div>
+        <p></p>
+    </div>
+    <div id="searchForm">
+        <form action="#" th:action="@{/search}" th:object="${searchDTO}" method="post">
+            <fieldset>
+                    <h2>Search Appointments</h2>
+                    <p>* Any or all of the 3 fields may be empty</p>
+                    <p>* If you want to nullify the dates please click 'Reset'</p>
+                <div id="searchFields">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th> Dentist </th>
+                                <th> Start Date and Time </th>
+                                <th> End Date and Time </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <select th:field="*{dentistName}">
+                                        <option th:value="0" th:text="None"></option>
+                                        <option th:each="name : ${dentistNames}" th:value="${name}" th:text="${name}"></option>
+                                    </select>
+                                </td>
+                                <td><input type="datetime-local" th:field="*{startingFromDate}"/></td>
+                                <td><input type="datetime-local" th:field="*{endOnDate}"/></td>
+                                <td><input type="submit" id="submitButton" th:value="SEARCH"/></td>
+                                <td><input type="reset" id="resetButton" name="reset" th:value="Reset"/></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div id="searchResult">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th> Dentist </th>
+                                <th> Appointment </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:if="${searchResult.empty()}">
+                                <td colspan="2"> Click 'Search' for a new search / No appointments have been found </td>
+                            </tr>
+                            <tr th:each="appointment : ${searchResult.getAppointments()}">
+                                <td><span th:text="${appointment.dentistName}"> Dentist </span></td>
+                                <td><span th:text="${appointment.appointmentDateTime}"> Appointment </span></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 </body>
 </html>
