--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -32,7 +32,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <h3 th:text="${error}"></h3>
+                <h3 th:text="${errorDateTimeBooked}"></h3>
             </fieldset>
         </form>
     </div>
