--- a/src/main/resources/templates/form_delete.html
+++ b/src/main/resources/templates/form_delete.html
@@ -36,7 +36,7 @@
                 </table>
             </fieldset>
         </form>
-        <h3 th:text="${error}"></h3>
+        <h3 th:text="${errorNoChosenAppointments}"></h3>
     </div>
 </body>
 </html>
