--- a/src/main/resources/templates/form_edit.html
+++ b/src/main/resources/templates/form_edit.html
@@ -38,8 +38,8 @@
                 </table>
             </fieldset>
         </form>
-        <h3 th:text="${error}"></h3>
-        <h3 th:text="${twoEqualAppointments}"></h3>
+        <h3 th:text="${errorNonValidDentistOrDate}"></h3>
+        <h3 th:text="${errorTwoEqualAppointments}"></h3>
     </div>
     </body>
 </html>
